MapKit user location.

--- a/MapKitTest/Base.lproj/Main.storyboard
+++ b/MapKitTest/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,49 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MapKitTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d1u-Md-RW6">
+                                <rect key="frame" x="0.0" y="44" width="414" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="2wf-2B-uUR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="7zo-5F-8L1">
+                                <rect key="frame" x="8" y="260" width="414" height="602"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="414" id="0Rf-mV-vGD"/>
+                                </constraints>
+                            </mapView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="7zo-5F-8L1" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="K0F-YP-ikL"/>
+                            <constraint firstItem="7zo-5F-8L1" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="P0Q-bm-v1q"/>
+                            <constraint firstItem="7zo-5F-8L1" firstAttribute="top" secondItem="d1u-Md-RW6" secondAttribute="bottom" constant="16" id="QqR-pI-CPT"/>
+                            <constraint firstItem="7zo-5F-8L1" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="cO7-Mi-1ue"/>
+                            <constraint firstItem="d1u-Md-RW6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ddO-rz-wxX"/>
+                            <constraint firstItem="d1u-Md-RW6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="rC2-hq-h9Z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d1u-Md-RW6" secondAttribute="trailing" id="t5n-o5-Wvg"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7zo-5F-8L1" secondAttribute="trailing" constant="-28" id="vqu-hU-i6p"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7zo-5F-8L1" secondAttribute="bottom" id="x8M-Xj-dQ9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="d1u-Md-RW6" id="aph-La-DDa"/>
+                        <outlet property="mapView" destination="7zo-5F-8L1" id="vkA-94-ACB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="528.98550724637687" y="109.82142857142857"/>
         </scene>
     </scenes>
 </document>
